<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">Grocery List</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="details_activity">Grocery Details</string>
    <string name="date">Date :</string>
    <string name="quantity">Qty :</string>
    <string name="groceryname">Groceryname</string>
</resources>
