<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/groceryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tile"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity_hint" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryQty"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:text="@string/save_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>