<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="19dp"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/noButton"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>