<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackgroundBorderless">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceryname"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:paddingTop="5dp"
                android:text="@string/quantity"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/dateAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity"
                android:paddingTop="5dp"
                android:text="@string/date" />


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/dateAdded"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/icon_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_delete" />

            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>